<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/main_menu">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/home_icon"
                    android:icon="@drawable/house_24"
                    android:title="@string/back_home" />

                <item
                    android:id="@+id/training_register"
                    android:icon="@drawable/ic_baseline_fitness_center_24"
                    android:title="@string/training_string" />

                <item
                    android:id="@+id/weight_register"
                    android:icon="@drawable/ic_baseline_monitor_weight_24"
                    android:title="@string/weight_string" />

                <item
                    android:id="@+id/menu_register"
                    android:icon="@drawable/ic_baseline_assignment_24"
                    android:title="@string/menu_string" />

            </group>
        </menu>
    </item>


    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/login_icon"
                    android:icon="@drawable/login_icon"
                    android:title="@string/login" />

                <item
                    android:id="@+id/logout_icon"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/logout" />

                <item
                    android:id="@+id/my_profile"
                    android:icon="@drawable/profile_icon"
                    android:title="@string/my_profile" />

            </group>
        </menu>
    </item>

    <item android:title="@string/contact">

        <menu>
            <group>

                <item
                    android:id="@+id/contact_us"
                    android:title="@string/contact_us" />

                <item
                    android:id="@+id/help_us"
                    android:title="@string/help_us" />

            </group>

        </menu>

    </item>

</menu>