<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="376dp"
    android:layout_height="124dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/muscle_genre_name"
            android:layout_width="64dp"
            android:layout_height="52dp"
            android:gravity="center"
            android:hint="@string/Muscle" />

        <TextView
            android:id="@+id/training_menu_name"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:hint="@string/menu_detail" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/training_weight_text"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/training_weight_unit_text"
            android:layout_width="18dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:text="@string/training_weight_unit" />

        <TextView
            android:layout_width="54dp"
            android:layout_height="36dp"
            android:background="@color/text_back"
            android:gravity="center_vertical"
            android:text="@string/training_first_set" />

        <TextView
            android:id="@+id/first_set"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:gravity="center" />

        <TextView
            android:layout_width="18dp"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:text="@string/unit_set" />

        <TextView
            android:layout_width="54dp"
            android:layout_height="36dp"
            android:background="@color/text_back"
            android:gravity="center_vertical"
            android:text="@string/training_second_set" />

        <TextView
            android:id="@+id/second_set"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:gravity="center" />

        <TextView
            android:layout_width="18dp"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:text="@string/unit_set" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/training_span_text"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/training_span_unit_text"
            android:layout_width="18dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:text="@string/training_weight_unit" />

        <TextView
            android:layout_width="54dp"
            android:layout_height="36dp"
            android:background="@color/text_back"
            android:gravity="center_vertical"
            android:text="@string/training_third_set" />

        <TextView
            android:id="@+id/third_set"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:gravity="center" />

        <TextView
            android:layout_width="18dp"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:text="@string/unit_set" />

        <TextView
            android:layout_width="54dp"
            android:layout_height="36dp"
            android:background="@color/text_back"
            android:gravity="center_vertical"
            android:text="@string/training_fourth_set" />

        <TextView
            android:id="@+id/fourth_set"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:gravity="center" />

        <TextView
            android:layout_width="18dp"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:text="@string/unit_set" />


    </LinearLayout>


</LinearLayout>